--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,12 @@ html {
 body {
   display: grid;
   grid-template-areas: "headline headline" "extra-info main-content";
+  grid-template-columns: 1fr 2fr;
   margin: 0;
   padding: 0;
   font-family: "Nunito";
-  width: 80vmax;
+  width: 816.37795276px;
+  height: 1054.488189px;
 }
 body header {
   grid-area: headline;
@@ -37,10 +39,37 @@ body aside {
 
 h2 {
   border-style: none none solid none;
-  border-color: #b0b7b7;
+  border-color: #effaff;
   border-width: 1px;
   text-transform: uppercase;
-  letter-spacing: 0.2rem;
+  letter-spacing: 0.1rem;
+  font-family: "Open Sans";
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+
+h3 {
+  margin: 0.5rem 0;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: initial;
+  font-size: 16px;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.5rem;
+}
+
+.dates {
+  font-style: italic;
+  color: #646464;
 }
 
 header {
@@ -48,24 +77,25 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 3rem 0;
+  padding: 2rem 0;
   box-sizing: border-box;
   background-color: #263749;
   color: #eff0f0;
 }
 header h1 {
   font-family: "Bodoni Classic Bold", serif;
-  font-size: 5rem;
+  font-size: 4rem;
   font-variant: small-caps;
+  letter-spacing: 0.2rem;
   display: flex;
   width: 100%;
   text-align: center;
 }
 header p {
   font-family: "Open Sans";
-  font-size: 2rem;
+  font-size: 1.3rem;
   text-transform: uppercase;
-  letter-spacing: 0.3rem;
+  letter-spacing: 0.1rem;
   display: flex;
   width: 100%;
 }
@@ -74,7 +104,7 @@ header p::after,
 header h1::before,
 header h1::after {
   content: "";
-  flex: 1 1;
+  flex: 1;
   border-bottom: 1px solid;
   margin: auto;
 }
@@ -93,12 +123,40 @@ header p::after {
   margin-left: 30px;
 }
 
-.examples {
-  box-sizing: border-box;
+main,
+aside {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
-.examples img {
-  max-width: 100%;
-  height: auto;
+
+main {
+  padding: 1rem 0 0 1rem;
+}
+
+aside {
+  padding: 1rem 1rem 0 0;
+}
+
+svg {
+  width: 30px;
+  height: 30px;
+  fill: #263749;
+}
+
+#contact-info ul {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+#contact-info ul li {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+aside {
+  background-color: #effaff;
 }
 
 /*# sourceMappingURL=styles.css.map */
