--- a/styles.scss
+++ b/styles.scss
@@ -8,7 +8,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
 
 $font-headline: 'Bodoni Classic Bold';
-$font-titles: 'Open Sans';
+$font-titles: 'Nunito';
 $font-content: 'Nunito';
 
 // Color pallette
@@ -17,6 +17,7 @@ $color-black: #272727;
 $color-darkblue: #263749;
 $color-lighgrey: #effaff;
 $color-white: #eff0f0;
+$color-darkgrey: #d8d8d8;
 
 // Initial setup
 
@@ -25,12 +26,8 @@ html {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-}
-
-// Mixins
-
-@mixin debug {
-	border: 1px solid red;
+	margin: 0;
+	padding: 0;
 }
 
 * {
@@ -70,7 +67,7 @@ body {
 
 h2 {
 	border-style: none none solid none;
-	border-color: $color-lighgrey;
+	border-color: $color-darkgrey;
 	border-width: 1px;
 	text-transform: uppercase;
 	letter-spacing: 0.1rem;
@@ -108,7 +105,7 @@ header {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	padding: 2rem 0;
+	padding: 0;
 	box-sizing: border-box;
 
 	background-color: $color-darkblue;
@@ -174,7 +171,7 @@ main {
 }
 
 aside {
-	padding: 1rem 1rem 0 0;
+	padding: 1rem 1rem 0 0.5rem;
 }
 
 svg {
