--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 * {
@@ -39,11 +41,11 @@ body aside {
 
 h2 {
   border-style: none none solid none;
-  border-color: #effaff;
+  border-color: #d8d8d8;
   border-width: 1px;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
-  font-family: "Open Sans";
+  font-family: "Nunito";
   font-size: 1.2rem;
   margin-bottom: 1rem;
 }
@@ -77,7 +79,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 2rem 0;
+  padding: 0;
   box-sizing: border-box;
   background-color: #263749;
   color: #eff0f0;
@@ -92,7 +94,7 @@ header h1 {
   text-align: center;
 }
 header p {
-  font-family: "Open Sans";
+  font-family: "Nunito";
   font-size: 1.3rem;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
@@ -135,7 +137,7 @@ main {
 }
 
 aside {
-  padding: 1rem 1rem 0 0;
+  padding: 1rem 1rem 0 0.5rem;
 }
 
 svg {
